use [hy-event-store] manage store by share data;add some new component,music page add recommend-song part

--- a/pages/detail-video/index.wxml
+++ b/pages/detail-video/index.wxml
@@ -4,7 +4,8 @@
     class="mv-video" 
     src="{{mvUrlInfo.url}}" 
     autoplay
-    loop></video>
+    loop
+    referrer-policy="origin"></video>
 
 <view class="mv-detail">
   <view class="mv-d-name">{{mvDetail.name}}</view>
