--- a/pages/home-music/index.wxml
+++ b/pages/home-music/index.wxml
@@ -27,7 +27,7 @@
 </swiper>
 
 <!--歌曲推荐-->
-<view class="recommend">
+<view class="recommend" wx:if="{{recommendSongs.length !== 0}}">
   <header-box titleText="歌曲推荐" otherText="更多"></header-box>
   <view>
     <block wx:for="{{recommendSongs}}" wx:key="id">
@@ -37,4 +37,20 @@
 </view>
 
 <!--热门歌单-->
-<view></view>
+<view wx:if="{{hotSongMenu.length !== 0}}">
+  <song-menu titleText="热门歌单" menuList="{{hotSongMenu}}"></song-menu>
+</view>
+<!--推荐歌单-->
+<view wx:if="{{recommendSongMenu.length !== 0}}">
+  <song-menu titleText="推荐歌单" menuList="{{recommendSongMenu}}"></song-menu>
+</view>
+
+<!--巅峰榜-->
+<view class="rankings">
+  <header-box titleText="巅峰榜" showMore="{{false}}"></header-box>
+  <view class="r-content">
+    <block wx:for="{{rankings}}" wx:key="index">
+      <ranking-box itemInfo="{{item}}"></ranking-box>
+    </block>
+  </view>
+</view>
