modify the bug of home-music page(if data is empty,must hide correspond view)

--- a/pages/home-music/index.wxml
+++ b/pages/home-music/index.wxml
@@ -46,11 +46,11 @@
 </view>
 
 <!--巅峰榜-->
-<view class="rankings">
+<view class="rankings" wx:if="{{rankings[0].name || rankings[1].name || rankings[2].name}}">
   <header-box titleText="巅峰榜" showMore="{{false}}"></header-box>
   <view class="r-content">
     <block wx:for="{{rankings}}" wx:key="index">
-      <ranking-box itemInfo="{{item}}"></ranking-box>
+      <ranking-box itemInfo="{{item}}" wx:if="{{item.name}}"></ranking-box>
     </block>
   </view>
 </view>
