detail-songs page is basically completed(songs list,song menu cover);detail-search page is partially completed(hotWords,searchSuggest)

--- a/components/header-box/index.wxml
+++ b/components/header-box/index.wxml
@@ -1,5 +1,5 @@
 <!--components/header-box/index.wxml-->
-<view class="header-box">
+<view class="header-box" bindtap="handleHeaderClick">
   <view class="header-title">{{titleText}}</view>
   <view class="header-other" wx:if="{{showMore}}">
     <view class="ho-slot"><slot></slot></view>
