detail-search page is completed(search);prepare develop music-player page

--- a/components/music-item-v1/index.wxml
+++ b/components/music-item-v1/index.wxml
@@ -1,5 +1,5 @@
 <!--components/music-item-v1/index.wxml-->
-<view class="item">
+<view class="item" bindtap="handleItemClick">
   <image class="cover" src="{{itemInfo.al.picUrl}}"></image>
   <view class="content">
     <view class="name">{{itemInfo.name}}</view>
