--- a/components/music-item-v2/index.wxml
+++ b/components/music-item-v2/index.wxml
@@ -1,14 +1,25 @@
 <!--components/music-item-v2/index.wxml-->
-<view class="item">
+<view class="item" bindtap="handleItemClick">
   <view class="index">{{index}}</view>
   <view class="content">
     <view class="name">{{itemInfo.name}}</view>
     <view class="author">
       <text class="music-tag">SQ</text>
       <text class="nickname">
-        <block wx:for="{{itemInfo.ar}}" wx:key="id">{{item.name}}{{itemInfo.ar.length-1 === index ? '' : ' / '}}</block>
-        <text decode wx:if="{{itemInfo.alia[0]}}">&nbsp;·&nbsp;</text>
-        <block>{{itemInfo.alia[0]}}</block>
+        <block wx:if="{{itemInfo.ar}}">
+          <block wx:for="{{itemInfo.ar}}" wx:key="id">{{item.name}}{{itemInfo.ar.length-1 === index ? '' : ' / '}}</block>
+        </block>
+        <block wx:if="{{itemInfo.artists}}">
+          <block wx:for="{{itemInfo.artists}}" wx:key="id">{{item.name}}{{itemInfo.artists.length-1 === index ? '' : ' / '}}</block>
+        </block>
+        <block wx:if="{{itemInfo.alia[0]}}">
+          <text decode>&nbsp;·&nbsp;</text>
+          <block>{{itemInfo.alia[0]}}</block>
+        </block>
+        <block wx:if="{{itemInfo.alias[0]}}">
+          <text decode>&nbsp;·&nbsp;</text>
+          <block>{{itemInfo.alias[0]}}</block>
+        </block>
       </text>
     </view>
   </view>
