--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -1,2 +1,47 @@
 <!--pages/music-player/index.wxml-->
-<text>pages/music-player/index.wxml</text>
+<!--背景-->
+<image class="bg-image" mode="aspectFill" src="{{currentSong.al.picUrl}}"></image>
+<view class="bg-cover"></view>
+
+<!--导航-->
+<view class="nav-box" style="height: {{navHeight}}px;">
+  <nav-bar>
+    <view slot="center" class="tab">
+      <view class="item {{currentPage == 0 ? 'active': ''}}" data-current="0" bindtap="clickItem">歌曲</view>
+      <view class="divider">|</view>
+      <view class="item {{currentPage == 1 ? 'active': ''}}" data-current="1" bindtap="clickItem">歌词</view>
+    </view>
+  </nav-bar>
+</view>
+
+<!--本体-->
+<swiper class="content" style="height: {{contentHeight}}px" current="{{currentPage}}" bindchange="handleChangeCurrent">
+  <swiper-item class="music">
+    <view class="album">
+      <image src="{{currentSong.al.picUrl}}" mode="widthFix"></image>
+    </view>
+    <view class="info">
+      <view class="title">{{currentSong.name}}</view>
+      <view class="subtitle">
+        <view>{{currentSong.al.name}}</view>
+        <view>专辑：{{currentSong.alia[0]}}</view>
+      </view>
+    </view>
+    <view class="lyric">默认歌词</view>
+    <slider class="slider" block-size='12' color="#999" selected-color="#fff"></slider>
+    <view class="time">
+      <view class="current">01:21</view>
+      <view class="duration">03:22</view>
+    </view>
+    <view class="operation">
+      <view class="btn"><image class="btn-type" src="/assets/images/player/play_order.png"></image></view>
+      <view class="btn"><image class="btn-prev" src="/assets/images/player/play_prev.png"></image></view>
+      <view class="btn"><image class="btn-mode" src="/assets/images/player/play_resume.png"></image></view>
+      <view class="btn"><image class="btn-next" src="/assets/images/player/play_next.png"></image></view>
+      <view class="btn"><image class="btn-list" src="/assets/images/player/play_music.png"></image></view>
+    </view>
+  </swiper-item>
+  <swiper-item class="lyric">
+    2
+  </swiper-item>
+</swiper>
