--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -1,1 +1,138 @@
 /* pages/music-player/index.wxss */
+page {
+  color: #fff;
+}
+/* 遮罩层 */
+.bg-image, .bg-cover {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.bg-cover {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(30px);
+}
+
+/* 导航栏 */
+.tab {
+  display: flex;
+  align-items: center;
+  color: #999;
+  font-size: 30rpx;
+}
+.tab .item {
+  margin: 10rpx 20rpx;
+}
+.tab .active {
+  color: #fff;
+}
+
+
+.content .music{
+  box-sizing: border-box;
+  padding: 20rpx 60rpx 30rpx;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.album {
+  flex: 5;
+  display: flex;
+  align-items: center;
+}
+.album image {
+  border-radius: 30rpx;
+}
+
+
+.info {
+  margin: 10rpx 0;
+}
+.title {
+  font-size: 40rpx;
+  font-weight: 800;
+  line-height: 55rpx;
+  margin-bottom: 10rpx;
+
+  /* 显示两行 */
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -moz-box;
+  -moz-line-clamp: 2;
+  -moz-box-orient: vertical;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
+  overflow: hidden;
+}
+.subtitle {
+  font-size: 28rpx;
+  color: #999;
+}
+.subtitle view {
+  line-height: 40rpx;
+
+  /* 显示两行 */
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -moz-box;
+  -moz-line-clamp: 2;
+  -moz-box-orient: vertical;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
+  overflow: hidden;
+}
+
+.lyric {
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30rpx;
+}
+
+.slider {
+  margin: 0 18rpx;
+}
+
+.time {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 24rpx;
+  margin-right: 20rpx;
+}
+
+.operation {
+  display: flex;
+  justify-content: space-between;
+}
+.btn {
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn image {
+  width: 60rpx;
+  height: 60rpx;
+}
+.btn .btn-type {
+  width: 80rpx;
+  height: 80rpx;
+}
+.btn .btn-mode {
+  width: 120rpx;
+  height: 120rpx;
+}
