music-player page can play(play/pause,drag-progress) music and show corresponding lyric

--- a/baseui/nav-bar/index.wxml
+++ b/baseui/nav-bar/index.wxml
@@ -5,7 +5,7 @@
 <view class="nav" style="height: {{navHeight}}px">
   <view class="left">
     <view class="left-slot slot"><slot name="left"></slot></view>
-    <view class="left-default default">
+    <view class="left-default default" bindtap="handleBack">
       <image src="/assets/images/icons/arrow-left.png"></image>
     </view>
   </view>
