--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -103,14 +103,14 @@ page {
 }
 
 .slider {
-  margin: 0 18rpx;
+  margin: 10rpx 0;
 }
 
 .time {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   font-size: 24rpx;
-  margin-right: 20rpx;
+  margin: 0 20rpx;
 }
 
 .operation {
