--- a/baseui/nav-bar/index.wxss
+++ b/baseui/nav-bar/index.wxss
@@ -3,7 +3,7 @@
   display: flex;
   font-size: 28rpx;
 }
-.left, .right, .center {
+.left, .right, .center, .left-default {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,12 +15,16 @@
   flex: 1;
 }
 .slot:empty + .default {
-  display: block;
+  display: flex;
 }
 .default {
   display: none;
 }
 
+.left-default {
+  width: 100%;
+  height: 100%;
+}
 .left-default image{
   width: 44rpx;
   height: 44rpx;
