--- a/pages/home-music/index.wxss
+++ b/pages/home-music/index.wxss
@@ -29,3 +29,84 @@ page {
 .recommend {
   padding: 10rpx 0;
 }
+
+/* 播放栏 */
+/* 在有播放栏存在时,底部留空,让原本的内容可以显示 */
+.anchor {
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
+.play-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  
+  display: flex;
+
+  background-color: #fafafa;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+  height: 40px;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+.play-bar .left {
+  flex: 1;
+  display: flex;
+  position: relative;
+}
+.left .album {
+  box-sizing: border-box;
+  width: 45px;
+  height: 45px;
+  margin: 0 5px;
+  border-radius: 50%;
+  background-color: #fafafa;
+
+  position: absolute;
+  top: -10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+.author-and-name {
+  margin-left: 60px;
+  width: 200px;
+  line-height: 40px;
+  font-size: 14px;
+  color: #000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.play-bar .right {
+  display: flex;
+  align-items: center;
+}
+.play-bar .right .btn {
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+}
+
+/* 歌曲列表 */
+.songs-list {
+  position: absolute;
+  bottom: 0;
+  background-color: #fafafa;
+  border-radius: 25rpx;
+  width: 100%;
+  height: 40%;
+  padding: 10rpx 0 30rpx;
+}
+.songs-list .btn-hide {
+  height: 40rpx;
+  line-height: 40rpx;
+  font-size: 24rpx;
+  color: #999;
+  text-align: center;
+}
+.songs-list .content {
+  height: calc(100% - 40rpx);
+}
