--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -159,3 +159,24 @@ page {
   color: #2e8;
   font-size: 34rpx;
 }
+
+/* 歌曲列表 */
+.songs-list {
+  position: absolute;
+  bottom: 0;
+  background-color: #fafafa;
+  border-radius: 25rpx;
+  width: 100%;
+  height: 40%;
+  padding: 10rpx 0 30rpx;
+}
+.songs-list .btn-hide {
+  height: 40rpx;
+  line-height: 40rpx;
+  font-size: 24rpx;
+  color: #999;
+  text-align: center;
+}
+.songs-list .content {
+  height: calc(100% - 40rpx);
+}
