--- a/pages/home-music/index.wxss
+++ b/pages/home-music/index.wxss
@@ -40,6 +40,7 @@ page {
 
 .play-bar {
   position: fixed;
+  z-index: 2;
   bottom: 0;
   left: 0;
   right: 0;
@@ -57,6 +58,15 @@ page {
   display: flex;
   position: relative;
 }
+
+@keyframes imgRolate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} 
 .left .album {
   box-sizing: border-box;
   width: 45px;
@@ -68,6 +78,8 @@ page {
   position: absolute;
   top: -10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+
+  animation: imgRolate 20s infinite;
 }
 .author-and-name {
   margin-left: 60px;
@@ -92,10 +104,13 @@ page {
 
 /* 歌曲列表 */
 .songs-list {
-  position: absolute;
-  bottom: 0;
+  position: fixed;
+  z-index: 1;
+  bottom: 40px;
+  left: 0;
+  right: 0;
   background-color: #fafafa;
-  border-radius: 25rpx;
+  border-radius: 25rpx 25rpx 0 0;
   width: 100%;
   height: 40%;
   padding: 10rpx 0 30rpx;
