add page of detail-menus

--- a/components/song-menu-item/index.wxml
+++ b/components/song-menu-item/index.wxml
@@ -1,6 +1,6 @@
 <!--components/song-menu-item/index.wxml-->
 <wxs module="format" src="/utils/format.wxs"></wxs>
-<view class="menu-item">
+<view class="menu-item" bindtap="handleMenuClick">
   <view class="album">
     <image class="cover" src="{{itemInfo.coverImgUrl}}" mode="widthFix"></image>
     <view class="count">{{format.formatCount(itemInfo.playCount)}}</view>
