--- a/pages/home-video/index.wxml
+++ b/pages/home-video/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/home-video/index.wxml-->
-<view class="video">
+<view class="video" wx:if="{{showPage}}">
   <view wx:for="{{topMVs}}" wx:key="id" class="video-item">
     <video-item-v1 itemInfo="{{item}}"></video-item-v1>
   </view>
