--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -165,7 +165,7 @@ page {
   position: absolute;
   bottom: 0;
   background-color: #fafafa;
-  border-radius: 25rpx;
+  border-radius: 25rpx 25rpx 0 0;
   width: 100%;
   height: 40%;
   padding: 10rpx 0 30rpx;
